# validator-brain

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Readme.md  build-docker.sh  create_nodemetrics_table.sql  docker-compose.yml  environment.example  epoch_orchestrator.py  metadata.scale  pyproject.toml  requirements.txt  start.sh
app/: __init__.py
db/: schema.sql
k8s/: DEPLOYMENT_GUIDE.md  README.md  configmap.yaml  consumers.yaml  create-migrations-configmap.sh  dbmate-job.yaml  deploy-full.sh  deploy.sh  epoch-health-job.yaml  epoch-orchestrator.yaml  file-assignment-processor-job.yaml  fix-postgres-corruption.sh  health-score-processor-job.yaml  ipfs-hpa.yaml  ipfs.yaml  manual-pinning-sync-job.yaml  migrations-configmap.yaml  miner-health-processor-job.yaml  miner-profile-reconstruction-job.yaml  namespace.yaml  network-rebalancing-job.yaml  nodeports-dynamic.yaml  nodeports.yaml  persistent-volumes.yaml  pinning-file-processor-job.yaml  postgres.yaml  rabbitmq.yaml  show-consumer-diff.sh  test-ipfs-config.sh  user-profile-reconstruction-job.yaml
rabbitmq/: __init__.py  availability_manager_processor.py  epoch_health_consumer.py  epoch_health_processor.py  file_assignment_consumer.py  file_assignment_processor.py  health_score_processor.py  miner_health_consumer.py  miner_health_processor.py  miner_profile_consumer.py  miner_profile_processor.py  miner_profile_reconstruction_consumer.py  miner_profile_reconstruction_processor.py  network_dereg.py  network_rebalancing_processor.py  network_self_healing_consumer.py  network_self_healing_processor.py  node_metrics_consumer.py  node_metrics_processor.py  pinning_file_consumer.py  pinning_file_processor.py  pinning_request_consumer.py  pinning_request_processor.py  registration_consumer.py  registration_processor.py  simple_file_assignment_processor.py  user_profile_consumer.py  user_profile_processor.py  user_profile_reconstruction_consumer.py  user_profile_reconstruction_processor.py
src/: api.rs  assignment.rs  config.rs  helpers.rs  (+6 more)
(+63 files in other folders)
